[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "steplog"
version = "0.1.0"
description = "Beautiful CLI output for Python scripts — steps, spinners, tables, zero deps"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ZachDreamZ" },
]
requires-python = ">=3.9"
keywords = ["cli", "terminal", "logging", "step", "spinner", "table"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ZachDreamZ/steplog"
Repository = "https://github.com/ZachDreamZ/steplog"
Documentation = "https://github.com/ZachDreamZ/steplog#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
